objects/Underwriting_Record__c.object
<CustomObject>
    <fields>
        <fullName>Pharmacy_Rebate_Credit_Sold_Revenue__c</fullName>
        <label>Pharmacy Rebate Credit Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Strategy_Op_Gain_Change__c</fullName>
        <label>Pricing Strategy Op Gain Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Strategy_Total_Op_Gain_Change_PC__c</fullName>
        <label>Pricing Strategy TotalOpGain Change PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Funding_Quote_Type__c</fullName>
        <label>Primary Funding Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>ABF</fullName>
                </value>
                <value>
                    <fullName>ASO Only</fullName>
                </value>
                <value>
                    <fullName>ASO w/Stop Loss</fullName>
                </value>
                <value>
                    <fullName>JAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Select the Product Code(s)</description>
        <label>Product Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>GenCHSA</fullName>
                </value>
                <value>
                    <fullName>GenCHRA</fullName>
                </value>
                <value>
                    <fullName>DEN</fullName>
                </value>
                <value>
                    <fullName>VIS</fullName>
                </value>
                <value>
                    <fullName>PPOHSA</fullName>
                </value>
                <value>
                    <fullName>PPOHRA</fullName>
                </value>
                <value>
                    <fullName>MEC Plus</fullName>
                </value>
                <value>
                    <fullName>MV Bronze</fullName>
                </value>
                <value>
                    <fullName>FH Den</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Contracts__c</fullName>
        <inlineHelpText>Est total subs w/ anticipated growth or reduction</inlineHelpText>
        <label>Proposed Contracts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Member_to_Contracts__c</fullName>
        <formula>Proposed_Members__c  / Proposed_Contracts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Member to Contracts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Members__c</fullName>
        <inlineHelpText>Est total members w/ anticipated growth or reduction</inlineHelpText>
        <label>Proposed Members</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Wellquote_Risk_Factor__c</fullName>
        <label>Proposed Wellquote Risk Factor</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Status_LG__c</fullName>
        <label>Prospect Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Quoted</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Declined by Sales</fullName>
                </value>
                <value>
                    <fullName>Declined by Underwriting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <label>Prospect Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quoted_ASO_Fee_PEPM_offset__c</fullName>
        <label>Quoted ASO Fee PEPM offset</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Annual_Revenue__c</fullName>
        <label>Quoted Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Discount_Share__c</fullName>
        <label>Quoted Discount Share %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quoted_Risk_Factor__c</fullName>
        <description>SR-296 requested by Kim Freeman.</description>
        <inlineHelpText>Enter 4 digit quoted risk factor</inlineHelpText>
        <label>Quoted Risk Factor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quoted_Sold_Broker_Comms_in_ASL_Fee_PEPM__c</fullName>
        <description>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</description>
        <inlineHelpText>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</inlineHelpText>
        <label>Quoted/Sold Broker Comms in ASL Fee PEPM</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Sold_Broker_Comms_in_ASO_Fee_PEPM__c</fullName>
        <description>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</description>
        <inlineHelpText>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</inlineHelpText>
        <label>Quoted/Sold Broker Comms in ASO Fee PEPM</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Sold_Broker_Comms_in_SSL_Fee_PEPM__c</fullName>
        <description>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</description>
        <inlineHelpText>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</inlineHelpText>
        <label>Quoted/Sold Broker Comms in SSL Fee PEPM</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Sold_Comm_PEPM__c</fullName>
        <inlineHelpText>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</inlineHelpText>
        <label>Quoted/Sold Comm PEPM</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Sold_Specific_Stop_Loss_Level__c</fullName>
        <description>The annual specific stop loss limit quoted. This should be revised if the Sold limit is different.</description>
        <inlineHelpText>The annual specific stop loss limit quoted. This should be revised if the Sold limit is different.</inlineHelpText>
        <label>Quoted/Sold Specific Stop Loss Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REP_Factor_Percentage__c</fullName>
        <formula>Opportunity__r.REP_Factor_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Revenue Enhancement Provision Factor</inlineHelpText>
        <label>ASO REP Factor Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reason_For_Decline__c</fullName>
        <label>Reason For Decline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Competitive</fullName>
                </value>
                <value>
                    <fullName>Did not receive requested data</fullName>
                </value>
                <value>
                    <fullName>Bad large claims experience</fullName>
                </value>
                <value>
                    <fullName>Cannot match benefits</fullName>
                </value>
                <value>
                    <fullName>Group headquartered outside of Ohio</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_Fee_w_Commission_Current__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Recommend Fee -w- Commission - Current</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommend_Fee_w_Commission_Renewal__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Recommend Fee -w- Commission - Renewal</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Eligible__c</fullName>
        <label>Refund Eligible?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Guaranteed__c</fullName>
        <inlineHelpText>Mandatory field used for Sales IC. Must select Yes or No.</inlineHelpText>
        <label>Renewal Guaranteed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_of_Base_Expense_Covered__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Renewal % of Base Expense Covered</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_of_Total_Expense_Covered__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Renewal % of Total Expense Covered</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Required_Op_Gain_Change__c</fullName>
        <label>Required Op Gain Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Required_Total_Op_Gain_Change_PCPM__c</fullName>
        <label>Required Total Op Gain Change PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Billing_Admin_Fee__c</fullName>
        <inlineHelpText>Rx ASO fee set by UW; may not match what WPS provided in UW Tool (cell D12 – SDFC tab)</inlineHelpText>
        <label>Rx Billing Admin Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Operating_Gain_Margin__c</fullName>
        <description>Should match D21 of SDFC tab of UW Tool and Rx total from profitability tab in retention model</description>
        <label>Rx Operating Gain Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Rebate_Credit__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Rx Rebate Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Termination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rx Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLRM_Rate_PCPM_Current__c</fullName>
        <inlineHelpText>enter rate for current SSL level and do not include ongoing claim load or other underwriting adj</inlineHelpText>
        <label>SLRM Rate PCPM Current</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLRM_Rate_PCPM_Proposed__c</fullName>
        <inlineHelpText>will be different from current SLRM only if different SSL level is quoted/sold</inlineHelpText>
        <label>SLRM Rate PCPM Proposed</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSLFormulaPCPMRate__c</fullName>
        <label>SSL Formula PCPM Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSLStopLossMargin__c</fullName>
        <formula>(  SSL_Final_Sold_PCPM_Rate__c / SSLFormulaPCPMRate__c ) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSL Stop Loss Margin %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Benefit_Change__c</fullName>
        <label>SSL Benefit Change %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Claimants_over_Specific_Level__c</fullName>
        <label>SSL Claimants over Specific Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSL_Commission__c</fullName>
        <label>SSL Commission</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSL_Commission_pct__c</fullName>
        <label>SSL Commission %</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Current_Incurred_Months__c</fullName>
        <label>SSL Current Incurred Months</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSL_Current_Paid_Months__c</fullName>
        <label>SSL Current Paid Months</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSL_Current_Rate_PCPM__c</fullName>
        <label>SSL Current Rate PCPM</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSL_Current_Specific_Level__c</fullName>
        <label>SSL Current Specific Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSL_Final_Rate_Action__c</fullName>
        <formula>SSL_Proposed_Rate_Action_Pre_Ben_Chg__c  +  SSL_Benefit_Change__c  +  SSL_UW_Discretionary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSL Final Rate Action %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Final_Sold_PCPM_Rate__c</fullName>
        <inlineHelpText>Enter proposed rate until renl is finalized</inlineHelpText>
        <label>SSL Final Sold PCPM Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSL_Formula_Rate_Action__c</fullName>
        <label>SSL Formula Rate Action %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Proposed_Incurred_Months__c</fullName>
        <label>SSL Proposed Incurred Months</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSL_Proposed_Paid_Months__c</fullName>
        <label>SSL Proposed Paid Months</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSL_Proposed_Rate_Action_Pre_Ben_Chg__c</fullName>
        <label>SSL Proposed Rate Action % Pre Ben Chg</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Proposed_Specific_Level__c</fullName>
        <label>SSL Proposed Specific Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSL_Reinsurer__c</fullName>
        <label>SSL Reinsurer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem with MRM</fullName>
                </value>
                <value>
                    <fullName>Anthem with BCS</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Gerber Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSL_Renewal_Stop_Loss_Margin__c</fullName>
        <formula>SSL_Final_Rate_Action__c  -  SSL_Formula_Rate_Action__c  -  SSL_Benefit_Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSL Renewal Stop Loss Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Sold__c</fullName>
        <label>SSL Sold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSL_Total_Excess_Amount__c</fullName>
        <label>SSL Total Excess Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSL_UW_Discretionary__c</fullName>
        <label>SSL UW Discretionary %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary__c</fullName>
        <label>Secondary Funding Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>ABF</fullName>
                </value>
                <value>
                    <fullName>ASO Only</fullName>
                </value>
                <value>
                    <fullName>ASO w/Stop Loss</fullName>
                </value>
                <value>
                    <fullName>JAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <inlineHelpText>Select the Appropriate Segments</inlineHelpText>
        <label>Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pre 65</fullName>
                </value>
                <value>
                    <fullName>Post 65</fullName>
                </value>
                <value>
                    <fullName>Union</fullName>
                </value>
                <value>
                    <fullName>Non Union</fullName>
                </value>
                <value>
                    <fullName>IW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>TEXT(Account__r.Situs_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Annual_Revenue__c</fullName>
        <label>Sold Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sold_Funding__c</fullName>
        <description>The underwriter should select the sold funding arrangement once confirmation is received from sales that the group is sold.</description>
        <inlineHelpText>The underwriter should select the sold funding arrangement once confirmation is received from sales that the group is sold.</inlineHelpText>
        <label>Sold Funding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>ABF</fullName>
                </value>
                <value>
                    <fullName>ASO Only</fullName>
                </value>
                <value>
                    <fullName>ASO w/Stop Loss</fullName>
                </value>
                <value>
                    <fullName>JAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_Op_Gain_Change__c</fullName>
        <label>Sold Op Gain Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solid_Risk_Factor__c</fullName>
        <description>SR 296 - Kim Freeman 4 digit number</description>
        <inlineHelpText>Enter 4 digit number for the solid risk factor</inlineHelpText>
        <label>Solid Risk Factor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specific_Stop_Loss_PEPM_Break_even__c</fullName>
        <label>Specific Stop Loss PEPM Break-even</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specific_Stop_Loss_PEPM_Current__c</fullName>
        <label>Specific Stop Loss PEPM Current</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specific_Stop_Loss_PEPM_Quoted__c</fullName>
        <label>Specific Stop Loss PEPM Quoted</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specific_Stop_Loss_PEPM_SLRM__c</fullName>
        <label>Specific Stop Loss PEPM SLRM</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specific_Stop_Loss_PEPM_Sold__c</fullName>
        <label>Specific Stop Loss PEPM Sold</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spin_Out_Off__c</fullName>
        <label>Spin-Out/Off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stop_Loss_Fee_Credit_Current_Revenue__c</fullName>
        <label>Stop Loss Fee Credit Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Fee_Credit_Sold_Revenue__c</fullName>
        <label>Stop Loss Fee Credit Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Pricing_Strategy_Cur_Op_Gain__c</fullName>
        <label>Stop-Loss Pricing Strategy Cur Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Pricing_Strategy_Op_Gain__c</fullName>
        <label>Stop-Loss Pricing Strategy Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Pricing_Strategy_Sold_Op_Gain__c</fullName>
        <label>Stop-Loss Pricing Strategy Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Reporting_Charge__c</fullName>
        <label>Stop Loss Reporting Charge</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>THTY_Current_Expense__c</fullName>
        <label>THTY Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>THTY_Current_Revenue__c</fullName>
        <label>THTY Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>THTY_Sold_Expense__c</fullName>
        <label>THTY Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>THTY_Sold_Revenue__c</fullName>
        <label>THTY Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use First of Month Only E.x. 1/1/17</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Top_Tier_Unlimited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the top tier of the loss ratio cap unlimited?</description>
        <inlineHelpText>Is the top tier of the loss ratio cap unlimited?</inlineHelpText>
        <label>Top Tier Unlimited?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Bill_Charges_Init_Proposed_Revenue__c</fullName>
        <label>Total Bill Charges Init Proposed Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Billed_Charges_Current_Expense__c</fullName>
        <label>Total Billed Charges Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Billed_Charges_Current_Op_Gain__c</fullName>
        <formula>Total_Billed_Charges_Current_Revenue__c - Total_Billed_Charges_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Billed Charges Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Billed_Charges_Current_Revenue__c</fullName>
        <label>Total Billed Charges Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Billed_Charges_Sold_Expense__c</fullName>
        <label>Total Billed Charges Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Billed_Charges_Sold_Op_Gain__c</fullName>
        <formula>Total_Billed_Charges_Sold_Revenue__c - Total_Billed_Charges_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Billed Charges Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Billed_Charges_Sold_Revenue__c</fullName>
        <label>Total Billed Charges Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Op_Gain_PCPM_Current_Op_Gain__c</fullName>
        <label>Total Op Gain PCPM Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Op_Gain_PCPM_Sold_Op_Gain__c</fullName>
        <label>Total Op Gain PCPM Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Position_vs_Average__c</fullName>
        <label>Total Position vs. Average</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Position_vs_BIC__c</fullName>
        <label>Total Position vs. BIC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <formula>ASO_Fee_Profit__c  +  CHS_Profit__c  +  Pharmacy_Profit__c  +  NCN_Profit__c  +  Fiduciary_Charge__c  +  Stop_Loss_Reporting_Charge__c  +  Other_Profits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trad_Savings__c</fullName>
        <label>Trad Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trad_Shared_Savings_Current_Op_Gain__c</fullName>
        <formula>Trad_Shared_Savings__c - 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trad Shared Savings Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trad_Shared_Savings_Sold_Op_Gain__c</fullName>
        <formula>Trad_Shared_Savings_Sold_Revenue__c - 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trad Shared Savings Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trad_Shared_Savings_Sold_Revenue__c</fullName>
        <label>Trad Shared Savings Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>